Send unique URLs from the client

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,8 +8,6 @@
         "default_icon": "images/synkk_icon.jpg"
     },
     "permissions": [
-        "tabs",
-        "identity",
-        "identity.email"
+        "tabs"
     ]
 }
