--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,5 +9,8 @@
     },
     "permissions": [
         "tabs"
-    ]
+    ],
+    "background": {
+        "service_worker": "background.js"
+    }
 }
