--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,6 +7,10 @@
         "default_popup": "popup/popup.html",
         "default_icon": "images/synkk_icon.jpg"
     },
+    "host_permissions": [
+        "http://*/*",
+        "https://*/*"
+    ],
     "permissions": [
         "tabs"
     ],
