Make all_urls for host_permissions

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,8 +8,7 @@
         "default_icon": "images/synkk_icon.jpg"
     },
     "host_permissions": [
-        "http://*/*",
-        "https://*/*"
+        "<all_urls>"
     ],
     "permissions": [
         "tabs"
