Add hello world route at root

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,8 @@
         "<all_urls>"
     ],
     "permissions": [
-        "tabs"
+        "tabs",
+        "tabGroups"
     ],
     "background": {
         "service_worker": "background.js"
